...
    }
    
    // MARK: - Конфигурация лайка (иконка + id для UI-тестов)
    func configureLikeButton(isLiked: Bool) {
        let img = isLiked ? UIImage(resource: .likeButtonOn) : UIImage(resource: .likeButtonOff)
        likeButton.setImage(img, for: .normal)
        likeButton.accessibilityIdentifier = isLiked ? "likeButtonOn" : "likeButtonOff"
    }
}


protocol ImagesListCellDelegate: AnyObject {
    func imageListCellDidTapLike(_ cell: ImagesListCell)
...
